disable jvmargs for java <9, use mavenCentral, and combine gradle scripts